--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -6,7 +6,12 @@
 </head>
 <body>
 <div>
-    <h1>sei dentro!!</h1>
+    <h1>Homepage</h1>
+    <a href="/bookList">Your books</a>
+    <a href="/userDetail">Your profile</a>
+    <a href="/addBook">Add a book</a>
+    <a href="/userList">Manage users</a>
+
 </div>
 
 </body>
