--- a/src/main/resources/templates/bookDetail.html
+++ b/src/main/resources/templates/bookDetail.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Book Detail</title>
 </head>
 <body>
+<h1>book detail</h1>
 
 </body>
 </html>
