--- a/src/main/resources/templates/bookList.html
+++ b/src/main/resources/templates/bookList.html
@@ -1,10 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Book List</title>
+    <style>
+        table {
+            border-collapse: collapse;
+            width: 80%;
+        }
+
+        th, td {
+            border: 1px solid #dddddd;
+            text-align: left;
+            padding: 8px;
+        }
+
+        th {
+            background-color: #f2f2f2;
+        }
+    </style>
 </head>
 <body>
+<h1>Booklist</h1>
 
+<table>
+    <thead>
+    <tr>
+        <th>Book Name</th>
+        <th>Year of Publish</th>
+        <th>Price</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="libro : ${libri}">
+        <td th:text="${libro.bookName}"></td>
+        <td th:text="${libro.yearOfPublish}"></td>
+        <td th:text="${libro.price}"></td>
+    </tr>
+    </tbody>
+</table>
+
+<a href="/addBook">Add a book</a>
 </body>
 </html>
