--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,15 +7,18 @@
 <body>
 <div>
     <h1>Login</h1>
-    <form id="inputName" method="post" th:action="@{/login}" th:object="${loginUser}">
+    <form id="inputName" method="post" th:action="@{/postlogin}" th:object="${loginUser}">
 
-        <input th:field="*{username}" type="text">
-        <span th:if="${#fields.hasErrors('username')}" th:errors="*{username}" />
+        <p>Username</p>
+        <input th:field="*{username}" type="text" >
+        <span th:if="${#fields.hasErrors('username')}" th:errors="*{username}">Username not valid</span>
 
+        <p>Password</p>
         <input th:field="*{password}" type="text">
-        <span th:if="${#fields.hasErrors('password')}" th:errors="*{password}" />
+        <span th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Password error</span>
 
         <button type="submit">Log in</button>
+        <a href="/registration">Sign in</a>
 
     </form>
 </div>
