--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -7,24 +7,28 @@
 <body>
 <div>
     <h1>Register</h1>
-    <form id="inputName" method="post" th:action="@{/registration}" th:object="${utente}">
+    <form id="inputName" method="post" th:action="@{/postregistration}" th:object="${utente}">
 
+        <p>Name</p>
         <input th:field="*{name}" type="text">
-        <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}" />
+        <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}">name error</span>
 
-        <input th:field="*{surname}" type="text">
-        <span th:if="${#fields.hasErrors('surname')}" th:errors="*{surname}" />
+        <p>Surname</p>
+        <input th:field="*{surname}" type="text" >
+        <span th:if="${#fields.hasErrors('surname')}" th:errors="*{surname}"> surname error</span>
 
+        <p>Username</p>
         <input th:field="*{username}" type="text">
-        <span th:if="${#fields.hasErrors('username')}" th:errors="*{username}" />
+        <span th:if="${#fields.hasErrors('username')}" th:errors="*{username}">username error</span>
 
+        <p>Password</p>
         <input th:field="*{password}" type="text">
-        <span th:if="${#fields.hasErrors('password')}" th:errors="*{password}" />
+        <span th:if="${#fields.hasErrors('password')}" th:errors="*{password}"> password error</span>
 
-        <input th:field="*{email}" type="text">
-        <span th:if="${#fields.hasErrors('email')}" th:errors="*{email}" />
 
         <button type="submit">Sign in</button>
+
+        <a href="/login">Log in</a>
 
     </form>
 </div>
